--- a/BuddyWingStatus/BuddyWingStatus.csproj
+++ b/BuddyWingStatus/BuddyWingStatus.csproj
@@ -136,6 +136,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-responsive.css" />
+    <Content Include="Content\bootstrap-responsive.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\glyphicons-halflings-white.png" />
+    <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="Content\jquery.dataTables.css" />
+    <Content Include="Content\jquery.dataTables_themeroller.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -163,13 +171,28 @@
     <Content Include="Content\themes\base\jquery.ui.slider.css" />
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
+    <Content Include="Content\themes\images\back_disabled.png" />
+    <Content Include="Content\themes\images\back_enabled.png" />
+    <Content Include="Content\themes\images\back_enabled_hover.png" />
+    <Content Include="Content\themes\images\favicon.ico" />
+    <Content Include="Content\themes\images\forward_disabled.png" />
+    <Content Include="Content\themes\images\forward_enabled.png" />
+    <Content Include="Content\themes\images\forward_enabled_hover.png" />
+    <Content Include="Content\themes\images\sort_asc.png" />
+    <Content Include="Content\themes\images\sort_asc_disabled.png" />
+    <Content Include="Content\themes\images\sort_both.png" />
+    <Content Include="Content\themes\images\sort_desc.png" />
+    <Content Include="Content\themes\images\sort_desc_disabled.png" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.6.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.2.js" />
     <Content Include="Scripts\jquery-1.6.2.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.dataTables.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
@@ -181,6 +204,7 @@
     <Content Include="Scripts\knockout-2.0.0.js" />
     <Content Include="Scripts\modernizr-2.0.6-development-only.js" />
     <Content Include="Scripts\_references.js" />
+    <None Include="Content\themes\images\Sorting icons.psd" />
     <None Include="Service References\PathServiceClient\BuddyWingStatus.PathServiceClient.PathCompositeType.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
